change the language reverywhere

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,5 +8,69 @@
   "trace_your_produce": "Trace Your Produce",
   "trace_description": "Enter the Batch ID from the product's QR code to see its full journey.",
   "enter_batch_id": "Enter Batch ID...",
-  "trace": "Trace"
+  "trace": "Trace",
+  "create_new_batch": "Create New Batch",
+  "create_new_batch_description": "Enter the details for the new produce batch.",
+  "product_type": "Product Type",
+  "quantity_kg": "Quantity (kg)",
+  "harvest_location": "Harvest Location",
+  "harvest_date": "Harvest Date",
+  "quality_grade": "Quality Grade",
+  "create_batch": "Create Batch",
+  "my_batches": "My Batches",
+  "my_batches_description": "A list of all produce batches you have created.",
+  "no_batches_created_yet": "No batches created yet.",
+  "product": "Product",
+  "quantity": "Quantity",
+  "status": "Status",
+  "show_qr_code": "Show QR Code",
+  "qr_code_for": "QR Code for",
+  "scan_to_trace": "Scan to trace this batch",
+  "error": "Error",
+  "success": "Success",
+  "new_batch_created_successfully": "New batch created successfully!",
+  "claim_batch": "Claim Batch",
+  "claim_batch_description": "Enter a batch ID to claim it from a farmer.",
+  "enter_batch_id_placeholder": "Enter Batch ID...",
+  "claim": "Claim",
+  "batch_claimed_successfully": "Batch claimed successfully!",
+  "my_inventory": "My Inventory",
+  "my_inventory_description_distributor": "Batches you currently have in transit.",
+  "no_batches_in_inventory": "No batches in your inventory.",
+  "transfer_to_retailer": "Transfer to Retailer",
+  "transfer_batch": "Transfer Batch",
+  "transfer_to_retailer_confirmation": "You are about to transfer this batch to the retailer:",
+  "action_irreversible": "This action is irreversible.",
+  "cancel": "Cancel",
+  "confirm_transfer": "Confirm Transfer",
+  "no_retailer_found": "No retailer found to transfer to.",
+  "batch_transferred_successfully": "Batch transferred to {retailerName}",
+  "set_price": "Set Price",
+  "my_stock": "My Stock",
+  "my_stock_description": "Batches you have in stock and ready to sell.",
+  "no_batches_in_stock": "You have no batches in stock.",
+  "current_price": "Current Price",
+  "not_set": "Not set",
+  "set_price_for": "Set Price for",
+  "selling_price": "Selling Price ($)",
+  "confirm_price": "Confirm Price",
+  "price_set_successfully": "Price set successfully!",
+  "batch_not_found": "Batch Not Found",
+  "batch_id_not_found": "The batch ID \"{batchId}\" could not be found. Please check the ID and try again.",
+  "supply_chain_journey": "Supply Chain Journey",
+  "current_status": "Current Status",
+  "verification": "Verification",
+  "blockchain_hash": "Blockchain Hash",
+  "harvested_by": "Harvested by",
+  "location": "Location",
+  "quality": "Quality",
+  "transferred_to": "Transferred to",
+  "handled_by": "Handled by",
+  "date": "Date",
+  "unknown": "Unknown",
+  "stocked_at": "Stocked at",
+  "price_set_on": "Price set on",
+  "price": "Price",
+  "awaiting_pricing_information": "Awaiting pricing information.",
+  "batch_name_placeholder": "Batch Name"
 }
