--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -8,5 +8,69 @@
   "trace_your_produce": "अपनी उपज को ट्रेस करें",
   "trace_description": "उत्पाद के क्यूआर कोड से बैच आईडी दर्ज करें ताकि उसकी पूरी यात्रा देख सकें।",
   "enter_batch_id": "बैच आईडी दर्ज करें...",
-  "trace": "ट्रेस"
+  "trace": "ट्रेस",
+  "create_new_batch": "नया बैच बनाएं",
+  "create_new_batch_description": "नए उपज बैच के लिए विवरण दर्ज करें।",
+  "product_type": "उत्पाद का प्रकार",
+  "quantity_kg": "मात्रा (किलो)",
+  "harvest_location": "कटाई का स्थान",
+  "harvest_date": "कटाई की तारीख",
+  "quality_grade": "गुणवत्ता ग्रेड",
+  "create_batch": "बैच बनाएं",
+  "my_batches": "मेरे बैच",
+  "my_batches_description": "आपके द्वारा बनाए गए सभी उपज बैचों की एक सूची।",
+  "no_batches_created_yet": "अभी तक कोई बैच नहीं बनाया गया है।",
+  "product": "उत्पाद",
+  "quantity": "मात्रा",
+  "status": "स्थिति",
+  "show_qr_code": "क्यूआर कोड दिखाएं",
+  "qr_code_for": "के लिए क्यूआर कोड",
+  "scan_to_trace": "इस बैच को ट्रेस करने के लिए स्कैन करें",
+  "error": "त्रुटि",
+  "success": "सफलता",
+  "new_batch_created_successfully": "नया बैच सफलतापूर्वक बनाया गया!",
+  "claim_batch": "बैच का दावा करें",
+  "claim_batch_description": "किसान से दावा करने के लिए एक बैच आईडी दर्ज करें।",
+  "enter_batch_id_placeholder": "बैच आईडी दर्ज करें...",
+  "claim": "दावा",
+  "batch_claimed_successfully": "बैच का सफलतापूर्वक दावा किया गया!",
+  "my_inventory": "मेरी इन्वेंट्री",
+  "my_inventory_description_distributor": "बैच जो आपके पास वर्तमान में पारगमन में हैं।",
+  "no_batches_in_inventory": "आपकी इन्वेंट्री में कोई बैच नहीं है।",
+  "transfer_to_retailer": "फुटकर विक्रेता को स्थानांतरित करें",
+  "transfer_batch": "बैच स्थानांतरित करें",
+  "transfer_to_retailer_confirmation": "आप इस बैच को फुटकर विक्रेता को स्थानांतरित करने वाले हैं:",
+  "action_irreversible": "यह कार्रवाई अपरिवर्तनीय है।",
+  "cancel": "रद्द करें",
+  "confirm_transfer": "स्थानांतरण की पुष्टि करें",
+  "no_retailer_found": "स्थानांतरित करने के लिए कोई फुटकर विक्रेता नहीं मिला।",
+  "batch_transferred_successfully": "बैच {retailerName} को सफलतापूर्वक स्थानांतरित कर दिया गया",
+  "set_price": "कीमत निर्धारित करें",
+  "my_stock": "मेरा स्टॉक",
+  "my_stock_description": "आपके पास स्टॉक में और बेचने के लिए तैयार बैच।",
+  "no_batches_in_stock": "आपके स्टॉक में कोई बैच नहीं है।",
+  "current_price": "वर्तमान मूल्य",
+  "not_set": "निर्धारित नहीं है",
+  "set_price_for": "के लिए मूल्य निर्धारित करें",
+  "selling_price": "बिक्री मूल्य ($)",
+  "confirm_price": "मूल्य की पुष्टि करें",
+  "price_set_successfully": "कीमत सफलतापूर्वक निर्धारित की गई!",
+  "batch_not_found": "बैच नहीं मिला",
+  "batch_id_not_found": "बैच आईडी \"{batchId}\" नहीं मिली। कृपया आईडी जांचें और फिर से प्रयास करें।",
+  "supply_chain_journey": "आपूर्ति श्रृंखला यात्रा",
+  "current_status": "वर्तमान स्थिति",
+  "verification": "सत्यापन",
+  "blockchain_hash": "ब्लॉकचेन हैश",
+  "harvested_by": "द्वारा काटा गया",
+  "location": "स्थान",
+  "quality": "गुणवत्ता",
+  "transferred_to": "को स्थानांतरित",
+  "handled_by": "द्वारा संभाला गया",
+  "date": "तारीख",
+  "unknown": "अज्ञात",
+  "stocked_at": "पर स्टॉक किया गया",
+  "price_set_on": "पर मूल्य निर्धारित",
+  "price": "कीमत",
+  "awaiting_pricing_information": "मूल्य निर्धारण जानकारी की प्रतीक्षा है।",
+  "batch_name_placeholder": "बैच का नाम"
 }
