--- a/src/locales/mr.json
+++ b/src/locales/mr.json
@@ -8,5 +8,69 @@
   "trace_your_produce": "तुमच्या उत्पादनाचा मागोवा घ्या",
   "trace_description": "उत्पादनाच्या क्यूआर कोडवरून बॅच आयडी प्रविष्ट करा आणि त्याचा संपूर्ण प्रवास पहा.",
   "enter_batch_id": "बॅच आयडी प्रविष्ट करा...",
-  "trace": "मागोवा"
+  "trace": "मागोवा",
+  "create_new_batch": "नवीन बॅच तयार करा",
+  "create_new_batch_description": "नवीन उत्पादन बॅचसाठी तपशील प्रविष्ट करा.",
+  "product_type": "उत्पादनाचा प्रकार",
+  "quantity_kg": "प्रमाण (किलो)",
+  "harvest_location": "कापणीचे ठिकाण",
+  "harvest_date": "कापणीची तारीख",
+  "quality_grade": "गुणवत्तेचा दर्जा",
+  "create_batch": "बॅच तयार करा",
+  "my_batches": "माझे बॅच",
+  "my_batches_description": "तुम्ही तयार केलेल्या सर्व उत्पादन बॅचची सूची.",
+  "no_batches_created_yet": "अद्याप कोणतेही बॅच तयार केलेले नाहीत.",
+  "product": "उत्पादन",
+  "quantity": "प्रमाण",
+  "status": "स्थिती",
+  "show_qr_code": "क्यूआर कोड दर्शवा",
+  "qr_code_for": "साठी क्यूआर कोड",
+  "scan_to_trace": "या बॅचचा मागोवा घेण्यासाठी स्कॅन करा",
+  "error": "त्रुटी",
+  "success": "यशस्वी",
+  "new_batch_created_successfully": "नवीन बॅच यशस्वीरित्या तयार झाला!",
+  "claim_batch": "बॅचवर दावा करा",
+  "claim_batch_description": "शेतकऱ्याकडून दावा करण्यासाठी बॅच आयडी प्रविष्ट करा.",
+  "enter_batch_id_placeholder": "बॅच आयडी प्रविष्ट करा...",
+  "claim": "दावा",
+  "batch_claimed_successfully": "बॅचवर यशस्वीरित्या दावा केला!",
+  "my_inventory": "माझी यादी",
+  "my_inventory_description_distributor": "तुमच्याकडे सध्या संक्रमणात असलेले बॅच.",
+  "no_batches_in_inventory": "तुमच्या यादीमध्ये कोणतेही बॅच नाहीत.",
+  "transfer_to_retailer": "किरकोळ विक्रेत्याकडे हस्तांतरित करा",
+  "transfer_batch": "बॅच हस्तांतरित करा",
+  "transfer_to_retailer_confirmation": "तुम्ही हा बॅच किरकोळ विक्रेत्याकडे हस्तांतरित करणार आहात:",
+  "action_irreversible": "ही क्रिया अपरिवर्तनीय आहे.",
+  "cancel": "रद्द करा",
+  "confirm_transfer": "हस्तांतरणाची पुष्टी करा",
+  "no_retailer_found": "हस्तांतरित करण्यासाठी कोणताही किरकोळ विक्रेता आढळला नाही.",
+  "batch_transferred_successfully": "बॅच {retailerName} कडे यशस्वीरित्या हस्तांतरित केला",
+  "set_price": "किंमत सेट करा",
+  "my_stock": "माझा स्टॉक",
+  "my_stock_description": "तुमच्याकडे स्टॉकमध्ये असलेले आणि विकायला तयार असलेले बॅच.",
+  "no_batches_in_stock": "तुमच्याकडे स्टॉकमध्ये कोणतेही बॅच नाहीत.",
+  "current_price": "सध्याची किंमत",
+  "not_set": "सेट नाही",
+  "set_price_for": "साठी किंमत सेट करा",
+  "selling_price": "विक्री किंमत ($)",
+  "confirm_price": "किंमत निश्चित करा",
+  "price_set_successfully": "किंमत यशस्वीरित्या सेट केली!",
+  "batch_not_found": "बॅच आढळला नाही",
+  "batch_id_not_found": "बॅच आयडी \"{batchId}\" आढळला नाही. कृपया आयडी तपासा आणि पुन्हा प्रयत्न करा.",
+  "supply_chain_journey": "पुरवठा साखळी प्रवास",
+  "current_status": "सद्यस्थिती",
+  "verification": "पडताळणी",
+  "blockchain_hash": "ब्लॉकचेन हॅश",
+  "harvested_by": "यांनी कापणी केली",
+  "location": "ठिकाण",
+  "quality": "गुणवत्ता",
+  "transferred_to": "कडे हस्तांतरित",
+  "handled_by": "यांनी हाताळले",
+  "date": "तारीख",
+  "unknown": "अज्ञात",
+  "stocked_at": "येथे स्टॉक केले",
+  "price_set_on": "वर किंमत सेट केली",
+  "price": "किंमत",
+  "awaiting_pricing_information": "किंमत माहितीची प्रतीक्षा आहे.",
+  "batch_name_placeholder": "बॅचचे नाव"
 }
