--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -8,5 +8,69 @@
   "trace_your_produce": "உங்கள் உற்பத்தியைக் கண்டறியவும்",
   "trace_description": "தயாரிப்பின் க்யூஆர் குறியீட்டிலிருந்து தொகுதி ஐடியை உள்ளிட்டு அதன் முழு பயணத்தையும் காணவும்.",
   "enter_batch_id": "தொகுதி ஐடியை உள்ளிடவும்...",
-  "trace": "கண்டறி"
+  "trace": "கண்டறி",
+  "create_new_batch": "புதிய தொகுதியை உருவாக்கவும்",
+  "create_new_batch_description": "புதிய உற்பத்தித் தொகுதிக்கான விவரங்களை உள்ளிடவும்.",
+  "product_type": "பொருள் வகை",
+  "quantity_kg": "அளவு (கிலோ)",
+  "harvest_location": "அறுவடை இடம்",
+  "harvest_date": "அறுவடை தேதி",
+  "quality_grade": "தர நிலை",
+  "create_batch": "தொகுதியை உருவாக்கவும்",
+  "my_batches": "எனது தொகுதிகள்",
+  "my_batches_description": "நீங்கள் உருவாக்கிய அனைத்து உற்பத்தித் தொகுதிகளின் பட்டியல்.",
+  "no_batches_created_yet": "இன்னும் தொகுதிகள் உருவாக்கப்படவில்லை.",
+  "product": "பொருள்",
+  "quantity": "அளவு",
+  "status": "நிலை",
+  "show_qr_code": "க்யூஆர் குறியீட்டைக் காட்டு",
+  "qr_code_for": "க்கான க்யூஆர் குறியீடு",
+  "scan_to_trace": "இந்தத் தொகுதியைக் கண்டறிய ஸ்கேன் செய்யவும்",
+  "error": "பிழை",
+  "success": "வெற்றி",
+  "new_batch_created_successfully": "புதிய தொகுதி வெற்றிகரமாக உருவாக்கப்பட்டது!",
+  "claim_batch": "தொகுதியைக் கோரவும்",
+  "claim_batch_description": "ஒரு விவசாயியிடமிருந்து அதைக் கோர ஒரு தொகுதி ஐடியை உள்ளிடவும்.",
+  "enter_batch_id_placeholder": "தொகுதி ஐடியை உள்ளிடவும்...",
+  "claim": "கோரிக்கை",
+  "batch_claimed_successfully": "தொகுதி வெற்றிகரமாக கோரப்பட்டது!",
+  "my_inventory": "எனது இருப்பு",
+  "my_inventory_description_distributor": "நீங்கள் தற்போது கொண்டு செல்லும் தொகுதிகள்.",
+  "no_batches_in_inventory": "உங்கள் இருப்பில் தொகுதிகள் எதுவும் இல்லை.",
+  "transfer_to_retailer": "சில்லறை விற்பனையாளருக்கு மாற்றவும்",
+  "transfer_batch": "தொகுதியை மாற்றவும்",
+  "transfer_to_retailer_confirmation": "நீங்கள் இந்தத் தொகுதியை சில்லறை விற்பனையாளருக்கு மாற்றப் போகிறீர்கள்:",
+  "action_irreversible": "இந்த நடவடிக்கை மாற்ற முடியாதது.",
+  "cancel": "ரத்துசெய்",
+  "confirm_transfer": "இடமாற்றத்தை உறுதிப்படுத்தவும்",
+  "no_retailer_found": "மாற்றுவதற்கு சில்லறை விற்பனையாளர் யாரும் இல்லை.",
+  "batch_transferred_successfully": "தொகுதி {retailerName} க்கு வெற்றிகரமாக மாற்றப்பட்டது",
+  "set_price": "விலை நிர்ணயிக்கவும்",
+  "my_stock": "எனது இருப்பு",
+  "my_stock_description": "விற்பனைக்கு தயாராக உள்ள உங்கள் கையிருப்பில் உள்ள தொகுதிகள்.",
+  "no_batches_in_stock": "உங்கள் இருப்பில் தொகுதிகள் எதுவும் இல்லை.",
+  "current_price": "தற்போதைய விலை",
+  "not_set": "நிர்ணயிக்கப்படவில்லை",
+  "set_price_for": "க்கான விலையை நிர்ணயிக்கவும்",
+  "selling_price": "விற்பனை விலை ($)",
+  "confirm_price": "விலையை உறுதிப்படுத்தவும்",
+  "price_set_successfully": "விலை வெற்றிகரமாக நிர்ணயிக்கப்பட்டது!",
+  "batch_not_found": "தொகுதி காணப்படவில்லை",
+  "batch_id_not_found": "தொகுதி ஐடி \"{batchId}\" காணப்படவில்லை. தயவுசெய்து ஐடியைச் சரிபார்த்து மீண்டும் முயற்சிக்கவும்.",
+  "supply_chain_journey": "விநியோகச் சங்கிலிப் பயணம்",
+  "current_status": "தற்போதைய நிலை",
+  "verification": "சரிபார்ப்பு",
+  "blockchain_hash": "பிளாக்செயின் ஹேஷ்",
+  "harvested_by": "அறுவடை செய்தது",
+  "location": "இடம்",
+  "quality": "தரம்",
+  "transferred_to": "க்கு மாற்றப்பட்டது",
+  "handled_by": "கையாளப்பட்டது",
+  "date": "தேதி",
+  "unknown": "தெரியவில்லை",
+  "stocked_at": "இருப்பில் உள்ளது",
+  "price_set_on": "விலை நிர்ணயிக்கப்பட்டது",
+  "price": "விலை",
+  "awaiting_pricing_information": "விலை நிர்ணய தகவலுக்காக காத்திருக்கிறது.",
+  "batch_name_placeholder": "தொகுதி பெயர்"
 }
