--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -8,5 +8,69 @@
   "trace_your_produce": "మీ ఉత్పత్తిని గుర్తించండి",
   "trace_description": "ఉత్పత్తి యొక్క క్యూఆర్ కోడ్ నుండి బ్యాచ్ ఐడిని నమోదు చేసి దాని పూర్తి ప్రయాణాన్ని చూడండి.",
   "enter_batch_id": "బ్యాచ్ ఐడిని నమోదు చేయండి...",
-  "trace": "గుర్తించు"
+  "trace": "గుర్తించు",
+  "create_new_batch": "కొత్త బ్యాచ్‌ను సృష్టించండి",
+  "create_new_batch_description": "కొత్త ఉత్పత్తి బ్యాచ్ కోసం వివరాలను నమోదు చేయండి.",
+  "product_type": "ఉత్పత్తి రకం",
+  "quantity_kg": "పరిమాణం (కిలో)",
+  "harvest_location": "పంట కోత ప్రదేశం",
+  "harvest_date": "పంట కోత తేదీ",
+  "quality_grade": "నాణ్యత గ్రేడ్",
+  "create_batch": "బ్యాచ్‌ను సృష్టించండి",
+  "my_batches": "నా బ్యాచ్‌లు",
+  "my_batches_description": "మీరు సృష్టించిన అన్ని ఉత్పత్తి బ్యాచ్‌ల జాబితా.",
+  "no_batches_created_yet": "ఇంకా బ్యాచ్‌లు సృష్టించబడలేదు.",
+  "product": "ఉత్పత్తి",
+  "quantity": "పరిమాణం",
+  "status": "స్థితి",
+  "show_qr_code": "QR కోడ్‌ను చూపించు",
+  "qr_code_for": "కోసం QR కోడ్",
+  "scan_to_trace": "ఈ బ్యాచ్‌ను ట్రేస్ చేయడానికి స్కాన్ చేయండి",
+  "error": "లోపం",
+  "success": "విజయం",
+  "new_batch_created_successfully": "కొత్త బ్యాచ్ విజయవంతంగా సృష్టించబడింది!",
+  "claim_batch": "బ్యాచ్‌ను క్లెయిమ్ చేయండి",
+  "claim_batch_description": "ఒక రైతు నుండి దానిని క్లెయిమ్ చేయడానికి బ్యాచ్ ఐడిని నమోదు చేయండి.",
+  "enter_batch_id_placeholder": "బ్యాచ్ ఐడిని నమోదు చేయండి...",
+  "claim": "క్లెయిమ్",
+  "batch_claimed_successfully": "బ్యాచ్ విజయవంతంగా క్లెయిమ్ చేయబడింది!",
+  "my_inventory": "నా ఇన్వెంటరీ",
+  "my_inventory_description_distributor": "మీరు ప్రస్తుతం రవాణాలో ఉన్న బ్యాచ్‌లు.",
+  "no_batches_in_inventory": "మీ ఇన్వెంటరీలో బ్యాచ్‌లు లేవు.",
+  "transfer_to_retailer": "చిల్లర వ్యాపారికి బదిలీ చేయండి",
+  "transfer_batch": "బ్యాచ్ బదిలీ",
+  "transfer_to_retailer_confirmation": "మీరు ఈ బ్యాచ్‌ను చిల్లర వ్యాపారికి బదిలీ చేయబోతున్నారు:",
+  "action_irreversible": "ఈ చర్య తిరిగి మార్చలేనిది.",
+  "cancel": "రద్దు చేయి",
+  "confirm_transfer": "బదిలీని నిర్ధారించండి",
+  "no_retailer_found": "బదిలీ చేయడానికి చిల్లర వ్యాపారి కనుగొనబడలేదు.",
+  "batch_transferred_successfully": "బ్యాచ్ {retailerName}కి విజయవంతంగా బదిలీ చేయబడింది",
+  "set_price": "ధరను సెట్ చేయండి",
+  "my_stock": "నా స్టాక్",
+  "my_stock_description": "మీ వద్ద స్టాక్‌లో ఉన్న మరియు అమ్మకానికి సిద్ధంగా ఉన్న బ్యాచ్‌లు.",
+  "no_batches_in_stock": "మీ స్టాక్‌లో బ్యాచ్‌లు లేవు.",
+  "current_price": "ప్రస్తుత ధర",
+  "not_set": "సెట్ చేయబడలేదు",
+  "set_price_for": "కోసం ధరను సెట్ చేయండి",
+  "selling_price": "అమ్మకపు ధర ($)",
+  "confirm_price": "ధరను నిర్ధారించండి",
+  "price_set_successfully": "ధర విజయవంతంగా సెట్ చేయబడింది!",
+  "batch_not_found": "బ్యాచ్ కనుగొనబడలేదు",
+  "batch_id_not_found": "బ్యాచ్ ఐడి \"{batchId}\" కనుగొనబడలేదు. దయచేసి ఐడిని తనిఖీ చేసి మళ్లీ ప్రయత్నించండి.",
+  "supply_chain_journey": "సరఫరా గొలుసు ప్రయాణం",
+  "current_status": "ప్రస్తుత స్థితి",
+  "verification": "ధృవీకరణ",
+  "blockchain_hash": "బ్లాక్‌చెయిన్ హాష్",
+  "harvested_by": "పంట కోసింది",
+  "location": "ప్రదేశం",
+  "quality": "నాణ్యత",
+  "transferred_to": "కి బదిలీ చేయబడింది",
+  "handled_by": "నిర్వహించింది",
+  "date": "తేదీ",
+  "unknown": "తెలియదు",
+  "stocked_at": "వద్ద స్టాక్ చేయబడింది",
+  "price_set_on": "న ధర సెట్ చేయబడింది",
+  "price": "ధర",
+  "awaiting_pricing_information": "ధరల సమాచారం కోసం వేచి ఉంది.",
+  "batch_name_placeholder": "బ్యాచ్ పేరు"
 }
