i need to change the language in the text box too

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,10 +12,13 @@
   "create_new_batch": "Create New Batch",
   "create_new_batch_description": "Enter the details for the new produce batch.",
   "product_type": "Product Type",
+  "product_type_placeholder": "e.g., Tomatoes",
   "quantity_kg": "Quantity (kg)",
   "harvest_location": "Harvest Location",
+  "harvest_location_placeholder": "e.g., Salinas, CA",
   "harvest_date": "Harvest Date",
   "quality_grade": "Quality Grade",
+  "quality_grade_placeholder": "e.g., Grade A, Premium",
   "create_batch": "Create Batch",
   "my_batches": "My Batches",
   "my_batches_description": "A list of all produce batches you have created.",
