--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -12,10 +12,13 @@
   "create_new_batch": "नया बैच बनाएं",
   "create_new_batch_description": "नए उपज बैच के लिए विवरण दर्ज करें।",
   "product_type": "उत्पाद का प्रकार",
+  "product_type_placeholder": "उदा., टमाटर",
   "quantity_kg": "मात्रा (किलो)",
   "harvest_location": "कटाई का स्थान",
+  "harvest_location_placeholder": "उदा., सलिनास, सीए",
   "harvest_date": "कटाई की तारीख",
   "quality_grade": "गुणवत्ता ग्रेड",
+  "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बैच बनाएं",
   "my_batches": "मेरे बैच",
   "my_batches_description": "आपके द्वारा बनाए गए सभी उपज बैचों की एक सूची।",
