--- a/src/locales/mr.json
+++ b/src/locales/mr.json
@@ -12,10 +12,13 @@
   "create_new_batch": "नवीन बॅच तयार करा",
   "create_new_batch_description": "नवीन उत्पादन बॅचसाठी तपशील प्रविष्ट करा.",
   "product_type": "उत्पादनाचा प्रकार",
+  "product_type_placeholder": "उदा., टोमॅटो",
   "quantity_kg": "प्रमाण (किलो)",
   "harvest_location": "कापणीचे ठिकाण",
+  "harvest_location_placeholder": "उदा., सलिनास, सीए",
   "harvest_date": "कापणीची तारीख",
   "quality_grade": "गुणवत्तेचा दर्जा",
+  "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बॅच तयार करा",
   "my_batches": "माझे बॅच",
   "my_batches_description": "तुम्ही तयार केलेल्या सर्व उत्पादन बॅचची सूची.",
