--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -12,10 +12,13 @@
   "create_new_batch": "புதிய தொகுதியை உருவாக்கவும்",
   "create_new_batch_description": "புதிய உற்பத்தித் தொகுதிக்கான விவரங்களை உள்ளிடவும்.",
   "product_type": "பொருள் வகை",
+  "product_type_placeholder": "எ.கா., தக்காளி",
   "quantity_kg": "அளவு (கிலோ)",
   "harvest_location": "அறுவடை இடம்",
+  "harvest_location_placeholder": "எ.கா., சலினாஸ், சிஏ",
   "harvest_date": "அறுவடை தேதி",
   "quality_grade": "தர நிலை",
+  "quality_grade_placeholder": "எ.கா., கிரேடு ஏ, பிரீமியம்",
   "create_batch": "தொகுதியை உருவாக்கவும்",
   "my_batches": "எனது தொகுதிகள்",
   "my_batches_description": "நீங்கள் உருவாக்கிய அனைத்து உற்பத்தித் தொகுதிகளின் பட்டியல்.",
