--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -12,10 +12,13 @@
   "create_new_batch": "కొత్త బ్యాచ్‌ను సృష్టించండి",
   "create_new_batch_description": "కొత్త ఉత్పత్తి బ్యాచ్ కోసం వివరాలను నమోదు చేయండి.",
   "product_type": "ఉత్పత్తి రకం",
+  "product_type_placeholder": "ఉదా., టమోటాలు",
   "quantity_kg": "పరిమాణం (కిలో)",
   "harvest_location": "పంట కోత ప్రదేశం",
+  "harvest_location_placeholder": "ఉదా., సాలినాస్, CA",
   "harvest_date": "పంట కోత తేదీ",
   "quality_grade": "నాణ్యత గ్రేడ్",
+  "quality_grade_placeholder": "ఉదా., గ్రేడ్ ఎ, ప్రీమియం",
   "create_batch": "బ్యాచ్‌ను సృష్టించండి",
   "my_batches": "నా బ్యాచ్‌లు",
   "my_batches_description": "మీరు సృష్టించిన అన్ని ఉత్పత్తి బ్యాచ్‌ల జాబితా.",
