change it to rupees instead of dollars

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,7 +55,7 @@
   "current_price": "Current Price",
   "not_set": "Not set",
   "set_price_for": "Set Price for",
-  "selling_price": "Selling Price ($)",
+  "selling_price": "Selling Price (₹)",
   "confirm_price": "Confirm Price",
   "price_set_successfully": "Price set successfully!",
   "batch_not_found": "Batch Not Found",
