--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -55,7 +55,7 @@
   "current_price": "वर्तमान मूल्य",
   "not_set": "निर्धारित नहीं है",
   "set_price_for": "के लिए मूल्य निर्धारित करें",
-  "selling_price": "बिक्री मूल्य ($)",
+  "selling_price": "बिक्री मूल्य (₹)",
   "confirm_price": "मूल्य की पुष्टि करें",
   "price_set_successfully": "कीमत सफलतापूर्वक निर्धारित की गई!",
   "batch_not_found": "बैच नहीं मिला",
