--- a/src/locales/mr.json
+++ b/src/locales/mr.json
@@ -55,7 +55,7 @@
   "current_price": "सध्याची किंमत",
   "not_set": "सेट नाही",
   "set_price_for": "साठी किंमत सेट करा",
-  "selling_price": "विक्री किंमत ($)",
+  "selling_price": "विक्री किंमत (₹)",
   "confirm_price": "किंमत निश्चित करा",
   "price_set_successfully": "किंमत यशस्वीरित्या सेट केली!",
   "batch_not_found": "बॅच आढळला नाही",
