--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -55,7 +55,7 @@
   "current_price": "தற்போதைய விலை",
   "not_set": "நிர்ணயிக்கப்படவில்லை",
   "set_price_for": "க்கான விலையை நிர்ணயிக்கவும்",
-  "selling_price": "விற்பனை விலை ($)",
+  "selling_price": "விற்பனை விலை (₹)",
   "confirm_price": "விலையை உறுதிப்படுத்தவும்",
   "price_set_successfully": "விலை வெற்றிகரமாக நிர்ணயிக்கப்பட்டது!",
   "batch_not_found": "தொகுதி காணப்படவில்லை",
