--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -55,7 +55,7 @@
   "current_price": "ప్రస్తుత ధర",
   "not_set": "సెట్ చేయబడలేదు",
   "set_price_for": "కోసం ధరను సెట్ చేయండి",
-  "selling_price": "అమ్మకపు ధర ($)",
+  "selling_price": "అమ్మకపు ధర (₹)",
   "confirm_price": "ధరను నిర్ధారించండి",
   "price_set_successfully": "ధర విజయవంతంగా సెట్ చేయబడింది!",
   "batch_not_found": "బ్యాచ్ కనుగొనబడలేదు",
