--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -74,12 +74,5 @@
   "stocked_at": "Stocked at",
   "price_set_on": "Price set on",
   "price": "Price",
-  "awaiting_pricing_information": "Awaiting pricing information.",
-  "batch_name_placeholder": "Batch Name",
-  "create_with_ai_assistant": "Create with AI Assistant",
-  "ai_batch_creation_assistant": "AI Batch Creation Assistant",
-  "ai_assistant_description": "Use your voice to create a new batch.",
-  "ai_assistant_description_conversational": "Talk to the assistant to fill out the batch details.",
-  "voice_assistant_feature_coming_soon": "Voice assistant feature coming soon.",
-  "close": "Close"
+  "awaiting_pricing_information": "Awaiting pricing information."
 }
