--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -38,7 +38,7 @@
   "claim": "క్లెయిమ్",
   "batch_claimed_successfully": "బ్యాచ్ విజయవంతంగా క్లెయిమ్ చేయబడింది!",
   "my_inventory": "నా ఇన్వెంటరీ",
-  "my_inventory_description_distributor": "మీరు ప్రస్తుతం రవాణాలో ఉన్న బ్యాచ్‌లు.",
+  "my_inventory_description_distributor": "మీరు ప్రస్తుతం రవాణాలో ఉన్న బ్యాచ్లు.",
   "no_batches_in_inventory": "మీ ఇన్వెంటరీలో బ్యాచ్‌లు లేవు.",
   "transfer_to_retailer": "చిల్లర వ్యాపారికి బదిలీ చేయండి",
   "transfer_batch": "బ్యాచ్ బదిలీ",
@@ -74,12 +74,5 @@
   "stocked_at": "వద్ద స్టాక్ చేయబడింది",
   "price_set_on": "న ధర సెట్ చేయబడింది",
   "price": "ధర",
-  "awaiting_pricing_information": "ధరల సమాచారం కోసం వేచి ఉంది.",
-  "batch_name_placeholder": "బ్యాచ్ పేరు",
-  "create_with_ai_assistant": "AI సహాయకుడితో సృష్టించండి",
-  "ai_batch_creation_assistant": "AI బ్యాచ్ సృష్టి సహాయకుడు",
-  "ai_assistant_description": "కొత్త బ్యాచ్‌ను సృష్టించడానికి మీ వాయిస్‌ని ఉపయోగించండి.",
-  "ai_assistant_description_conversational": "బ్యాచ్ వివరాలు నింపడానికి సహాయకుడితో మాట్లాడండి.",
-  "voice_assistant_feature_coming_soon": "వాయిస్ అసిస్టెంట్ ఫీచర్ త్వరలో వస్తుంది.",
-  "close": "మూసివేయి"
+  "awaiting_pricing_information": "ధరల సమాచారం కోసం వేచి ఉంది."
 }
