it will speech to operation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -20,6 +20,9 @@
   "quality_grade": "Quality Grade",
   "quality_grade_placeholder": "e.g., Grade A, Premium",
   "create_batch": "Create Batch",
+  "create_with_ai_assistant": "Create with AI Assistant",
+  "ai_assistant": "AI Assistant",
+  "assistant_coming_soon": "Voice assistant coming soon...",
   "my_batches": "My Batches",
   "my_batches_description": "A list of all produce batches you have created.",
   "no_batches_created_yet": "No batches created yet.",
