--- a/src/locales/hi.json
+++ b/src/locales/hi.json
@@ -20,6 +20,9 @@
   "quality_grade": "गुणवत्ता ग्रेड",
   "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बैच बनाएं",
+  "create_with_ai_assistant": "एआई सहायक के साथ बनाएं",
+  "ai_assistant": "एआई सहायक",
+  "assistant_coming_soon": "आवाज सहायक जल्द ही आ रहा है...",
   "my_batches": "मेरे बैच",
   "my_batches_description": "आपके द्वारा बनाए गए सभी उपज बैचों की एक सूची।",
   "no_batches_created_yet": "अभी तक कोई बैच नहीं बनाया गया है।",
