--- a/src/locales/mr.json
+++ b/src/locales/mr.json
@@ -20,6 +20,9 @@
   "quality_grade": "गुणवत्तेचा दर्जा",
   "quality_grade_placeholder": "उदा., ग्रेड ए, प्रीमियम",
   "create_batch": "बॅच तयार करा",
+  "create_with_ai_assistant": "एआय सहाय्यकासह तयार करा",
+  "ai_assistant": "एआय सहाय्यक",
+  "assistant_coming_soon": "व्हॉइस सहाय्यक लवकरच येत आहे...",
   "my_batches": "माझे बॅच",
   "my_batches_description": "तुम्ही तयार केलेल्या सर्व उत्पादन बॅचची सूची.",
   "no_batches_created_yet": "अद्याप कोणतेही बॅच तयार केलेले नाहीत.",
