--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -20,6 +20,9 @@
   "quality_grade": "தர நிலை",
   "quality_grade_placeholder": "எ.கா., கிரேடு ஏ, பிரீமியம்",
   "create_batch": "தொகுதியை உருவாக்கவும்",
+  "create_with_ai_assistant": "AI உதவியாளருடன் உருவாக்கவும்",
+  "ai_assistant": "AI உதவியாளர்",
+  "assistant_coming_soon": "குரல் உதவியாளர் விரைவில்...",
   "my_batches": "எனது தொகுதிகள்",
   "my_batches_description": "நீங்கள் உருவாக்கிய அனைத்து உற்பத்தித் தொகுதிகளின் பட்டியல்.",
   "no_batches_created_yet": "இன்னும் தொகுதிகள் உருவாக்கப்படவில்லை.",
