--- a/src/locales/te.json
+++ b/src/locales/te.json
@@ -20,6 +20,9 @@
   "quality_grade": "నాణ్యత గ్రేడ్",
   "quality_grade_placeholder": "ఉదా., గ్రేడ్ ఎ, ప్రీమియం",
   "create_batch": "బ్యాచ్‌ను సృష్టించండి",
+  "create_with_ai_assistant": "AI అసిస్టెంట్‌తో సృష్టించండి",
+  "ai_assistant": "AI అసిస్టెంట్",
+  "assistant_coming_soon": "వాయిస్ అసిస్టెంట్ త్వరలో వస్తుంది...",
   "my_batches": "నా బ్యాచ్‌లు",
   "my_batches_description": "మీరు సృష్టించిన అన్ని ఉత్పత్తి బ్యాచ్‌ల జాబితా.",
   "no_batches_created_yet": "ఇంకా బ్యాచ్‌లు సృష్టించబడలేదు.",
