--- a/src/locales/ta.json
+++ b/src/locales/ta.json
@@ -77,5 +77,7 @@
   "stocked_at": "இருப்பில் உள்ளது",
   "price_set_on": "விலை நிர்ணயிக்கப்பட்டது",
   "price": "விலை",
-  "awaiting_pricing_information": "விலை நிர்ணய தகவலுக்காக காத்திருக்கிறது."
+  "awaiting_pricing_information": "விலை நிர்ணய தகவலுக்காக காத்திருக்கிறது.",
+  "type_your_message": "உங்கள் செய்தியைத் தட்டச்சு செய்க...",
+  "send": "அனுப்பு"
 }
